# android-feyiu-remote

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: CMakeLists.txt  crclib-c.cpp
app/src/main/cpp/ncnn-20231027-android-vulkan/arm64-v8a/include/glslang/Include/: BaseTypes.h  ConstantUnion.h  Types.h  glslang_c_interface.h  intermediate.h
app/src/main/cpp/ncnn-20231027-android-vulkan/arm64-v8a/include/ncnn/: blob.h  c_api.h  datareader.h  gpu.h  layer.h  layer_shader_type_enum.h
app/src/main/cpp/ncnn-20231027-android-vulkan/arm64-v8a/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
app/src/main/cpp/ncnn-20231027-android-vulkan/armeabi-v7a/include/ncnn/: allocator.h  benchmark.h  command.h  cpu.h
app/src/main/cpp/ncnn-20231027-android-vulkan/armeabi-v7a/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
app/src/main/cpp/ncnn-20231027-android-vulkan/x86/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
app/src/main/cpp/ncnn-20231027-android-vulkan/x86_64/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslang-default-resource-limitsTargets.cmake  glslangTargets.cmake
app/src/main/cpp/ncnn-bodypose/: nanodet.cpp  nanodet.h  nanodetncnn.cpp
app/src/main/cpp/opencv-mobile-4.8.1-android/sdk/native/jni/: OpenCVConfig.cmake
app/src/main/cpp/yolov8/: yolo.cpp  yolov8ncnn.cpp
(+719 files in other folders)
